# kio-computer

./: .gitignore  CMakeLists.txt  README.md  computer.cpp  computer.h  computer.json  kio-computer.kdev4
.kdev4/: kio-computer.kdev4
